Impressively approaching complete validity for the smoketests

--- a/nend/nend/tests/files/expected.mobydick.html
+++ b/nend/nend/tests/files/expected.mobydick.html
@@ -1,22 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" profile="http://www.idpf.org/epub/30/profile/content/"><head><title>Moby-Dick</title></head>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" profile="http://www.idpf.org/epub/30/profile/content/"><head><title>Moby-Dick</title></head><body>
   
   
   
-  <body><nav epub:type="toc" id="toc"><h1>Contents</h1><ol>
-    <li id="cover"><a href="cover.html">Cover</a></li>
-    <li id="titlepage"><a href="titlepage.html">Title Page</a></li>
-    <li id="preface_001"><a href="preface_001.html">Original Transcriber’s Notes:</a></li>
-    <li id="introduction_001"><a href="introduction_001.html">ETYMOLOGY.</a></li>
-    <li id="epigraph_001"><a href="epigraph_001.html">EXTRACTS (Supplied by a Sub-Sub-Librarian).</a></li>
-    <li id="chapter_001"><a href="chapter_001.html">Chapter 1. Loomings.</a></li>
-    <li id="chapter_002"><a href="chapter_002.html">Chapter 2. The Carpet-Bag.</a></li>
-    <li id="chapter_003"><a href="chapter_003.html">Chapter 3. The Spouter-Inn.</a></li>
-    <li id="chapter_004"><a href="chapter_004.html">Chapter 4. The Counterpane.</a></li>
-    <li id="chapter_005"><a href="chapter_005.html">Chapter 5. Breakfast.</a></li>
-    <li id="chapter_006"><a href="chapter_006.html">Chapter 6. The Street.</a></li>
-    <li id="chapter_007"><a href="chapter_007.html">Chapter 7. The Chapel.</a></li>
-    <li id="chapter_008"><a href="chapter_008.html">Chapter 8. The Pulpit.</a></li>
-    <li id="copyright"><a href="copyright.html">Copyright Page</a></li>
-  </ol></nav></body>
-</html>
+  <nav id="toc" epub:type="toc"><h1>Contents</h1><ol>
+<li id="cover"><a href="cover.html">Cover</a></li>
+<li id="titlepage"><a href="titlepage.html">Title Page</a></li>
+<li id="preface_001"><a href="preface_001.html">Original Transcriber’s Notes:</a></li>
+<li id="introduction_001"><a href="introduction_001.html">ETYMOLOGY.</a></li>
+<li id="epigraph_001"><a href="epigraph_001.html">EXTRACTS (Supplied by a Sub-Sub-Librarian).</a></li>
+<li id="chapter_001"><a href="chapter_001.html">Chapter 1. Loomings.</a></li>
+<li id="chapter_002"><a href="chapter_002.html">Chapter 2. The Carpet-Bag.</a></li>
+<li id="chapter_003"><a href="chapter_003.html">Chapter 3. The Spouter-Inn.</a></li>
+<li id="chapter_004"><a href="chapter_004.html">Chapter 4. The Counterpane.</a></li>
+<li id="chapter_005"><a href="chapter_005.html">Chapter 5. Breakfast.</a></li>
+<li id="chapter_006"><a href="chapter_006.html">Chapter 6. The Street.</a></li>
+<li id="chapter_007"><a href="chapter_007.html">Chapter 7. The Chapel.</a></li>
+<li id="chapter_008"><a href="chapter_008.html">Chapter 8. The Pulpit.</a></li>
+<li id="copyright"><a href="copyright.html">Copyright Page</a></li></ol></nav>
+</body></html>
